Agregando pruebas de javamail para servicio de infraestructura

--- a/sidep/nbproject/project.properties
+++ b/sidep/nbproject/project.properties
@@ -21,10 +21,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/sidep.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.dsn.jar=lib\\dsn.jar
+file.reference.imap.jar=lib\\imap.jar
+file.reference.mailapi.jar=lib\\mailapi.jar
+file.reference.pop3.jar=lib\\pop3.jar
+file.reference.smtp.jar=lib\\smtp.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.dsn.jar}:\
+    ${file.reference.imap.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.pop3.jar}:\
+    ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
