--- a/sidep/nbproject/private/private.properties
+++ b/sidep/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 #Wed May 09 13:16:37 MST 2012
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\Rafuru\\.netbeans\\7.1.2\\build.properties
+user.properties.file=D:\\Users\\ignacio\\.netbeans\\7.1.2\\build.properties
